--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h3>New Transaction</h3>
 			<form id="form">
 				<div class="form-control">
-					<label for="text"></label>
+					<label for="text">Text</label>
 					<input type="text" id="text" placeholder="Enter text..." />
 				</div>
 				<div class="form-control">
