--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 			<h3>History</h3>
 			<ul id="list" class="list">
-				<li class="minus">
+				<!-- <li class="minus">
 					Cash <span>-$400</span><button class="delete-btn">X</button>
 				</li>
 				<li class="minus">
 					Cash <span>-$300</span><button class="delete-btn">X</button>
-				</li>
+				</li> -->
 			</ul>
 
 			<h3>New Transaction</h3>
